<resources>
    <string name="app_name">Twasul App</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">User Name</string>
    <string name="mpassword">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="login_txt">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="tab_text">tab1</string>
    <string name="send">Send</string>
    <string name="forget_your_password">forget your password ?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
